
set(X11_BASIC_RASTER_TARGET_NAME ${PROJECT_NAME})

add_library(${X11_BASIC_RASTER_TARGET_NAME} X11BasicRaster.hpp X11BasicRaster.cpp)

target_link_libraries(${X11_BASIC_RASTER_TARGET_NAME} PRIVATE X11)

add_library(${X11_BASIC_RASTER_TARGET_NAME}::${X11_BASIC_RASTER_TARGET_NAME} ALIAS ${X11_BASIC_RASTER_TARGET_NAME})

target_compile_features(${X11_BASIC_RASTER_TARGET_NAME} INTERFACE cxx_std_20)
target_include_directories(${X11_BASIC_RASTER_TARGET_NAME} INTERFACE
  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>)

